--- a/dshop/templates/theme/default/plugins/bloc-etapes-child.html
+++ b/dshop/templates/theme/default/plugins/bloc-etapes-child.html
@@ -11,10 +11,8 @@
     {% if instance.title or instance.text %}
       <div class="box-info">
         {% if instance.title %}
-        <div>
-          <a href="#" class="box-title">
+        <div class="text-primary">
             {{instance.title}}
-          </a>
         </div>
         {% endif %}
         {% if instance.text %}
