--- a/dshop/templates/theme/default/plugins/bloc-etapes-parent.html
+++ b/dshop/templates/theme/default/plugins/bloc-etapes-parent.html
@@ -1,35 +1,29 @@
 {% load static thumbnail cms_tags i18n %}
 
-<!-- HOW IT WORK SECTION START -->
-<section class="how-work ptb180">
-  {% if instance.title or instance.subtitle %}
+<div class="section py-5">
     <div class="container">
-      <div class="row">
-        <div class="col-xl-12 text-center">
-          <div class="title-bl">
-            {% if instance.title %}
-              <div class="title wow fadeIn animated">
-                {{instance.title}}
-              </div>
-            {% endif %}
-            {% if instance.subtitle %}
-              <div class="subtitle color-9">
-                {{instance.subtitle}}
-              </div>
-            {% endif %}
-          </div>
+        {% if instance.title or instance.text %}
+            <div class="row text-center">
+                <div class="col-12">
+                    {% if instance.title %}
+                        <h2 class="title">
+                            {{instance.title}}
+                        </h2>
+                    {% endif %}
+                    {% if instance.subtitle %}
+                        <div class="subtitle">
+                            {{instance.subtitle|safe}}
+                        </div>
+                    {% endif %}
+                </div>
+            </div>
+        {% endif %}
+        <div class="row justify-content-evenly">
+            {% for plugin in instance.child_plugin_instances %}
+                {% with instance.perline as perline %}
+                    {% render_plugin plugin %}
+                {% endwith %}
+            {% endfor %}
         </div>
-      </div>
     </div>
-  {% endif %}
-  <div class="container box-wrapper">
-    <div class="row">
-      {% for plugin in instance.child_plugin_instances %}
-        {% with forloop.counter as counter %}
-          {% render_plugin plugin %}
-        {% endwith %}
-      {% endfor %}
-    </div>
-  </div>
-</section>
-<!-- HOW IT WORK SECTION END -->
+</div>
