update i18n + admin height bug

--- a/apps/dmAdminTheme/static/dmAdminTheme/css/admin.css
+++ b/apps/dmAdminTheme/static/dmAdminTheme/css/admin.css
@@ -183,6 +183,9 @@ input[type=button].language_button.selected {
 
 /* ===--- ---=== */
 
+html.dm-admin-dashboard {
+    height: auto!important;
+}
 #dm-admin-dashboard {
     padding: 0;
 }
