--- a/dshop/templates/theme/default/navbar/menu-parent.html
+++ b/dshop/templates/theme/default/navbar/menu-parent.html
@@ -10,51 +10,53 @@
             <a href="#" class="dm-menu-split dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <span class="sr-only">Toggle Dropdown</span>
             </a>
-            <div class="dropdown-menu dropdown">
-                <ul>
-                {% for categorie in categories %}
-                {% dm_get_category_by_category categorie.id as child_categories %}
-                <li>
-                    <a class="dropdown-item{% if child_categories %} menu-link{% else %} nav-link nav_item{% endif %}" href="/produits/{{categorie.id}}-{{categorie.name|slugify}}">
-                        {{categorie.name}}
-                    </a>
-                    {% if child_categories %}
-                        <a href="#" class="dm-menu-split dropdown-toggler dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <span class="sr-only">Toggle Dropdown</span>
+            {% if categories %}
+                <div class="dropdown-menu dropdown">
+                    <ul>
+                    {% for categorie in categories %}
+                    {% dm_get_category_by_category categorie.id as child_categories %}
+                    <li>
+                        <a class="dropdown-item{% if child_categories %} menu-link{% else %} nav-link nav_item{% endif %}" href="/produits/{{categorie.id}}-{{categorie.name|slugify}}">
+                            {{categorie.name}}
                         </a>
-                        <div class="dropdown-menu">
-                            <ul>
-                                {% for child_category in child_categories %}
-                                {% dm_get_category_by_category child_category.id as child_subcategories %}
-                                <li>
-                                    <a class="dropdown-item nav-link nav_item" href="/produits/{{child_category.id}}-{{child_category.name|slugify}}">
-                                        {{child_category.name}}
-                                    </a>
-                                    {% if child_subcategories %}
-                                        <a href="#" class="dm-menu-split dropdown-toggler dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            <span class="sr-only">Toggle Dropdown</span>
+                        {% if child_categories %}
+                            <a href="#" class="dm-menu-split dropdown-toggler dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <span class="sr-only">Toggle Dropdown</span>
+                            </a>
+                            <div class="dropdown-menu">
+                                <ul>
+                                    {% for child_category in child_categories %}
+                                    {% dm_get_category_by_category child_category.id as child_subcategories %}
+                                    <li>
+                                        <a class="dropdown-item nav-link nav_item" href="/produits/{{child_category.id}}-{{child_category.name|slugify}}">
+                                            {{child_category.name}}
                                         </a>
-                                        <div class="dropdown-menu">
-                                            <ul>
-                                                {% for child_subcategorie in child_subcategories %}
-                                                <li>
-                                                    <a class="dropdown-item nav-link nav_item" href="/produits/{{child_subcategorie.id}}-{{child_subcategorie.name|slugify}}">
-                                                        {{child_subcategorie.name}}
-                                                    </a>
-                                                </li>
-                                                {% endfor %}
-                                            </ul>
-                                        </div>
-                                    {% endif %}
-                                </li>
-                                {% endfor %}
-                            </ul>
-                        </div>
-                    {% endif %}
-                </li>
-                {% endfor %}
-                </ul>
-            </div>
+                                        {% if child_subcategories %}
+                                            <a href="#" class="dm-menu-split dropdown-toggler dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                <span class="sr-only">Toggle Dropdown</span>
+                                            </a>
+                                            <div class="dropdown-menu">
+                                                <ul>
+                                                    {% for child_subcategorie in child_subcategories %}
+                                                    <li>
+                                                        <a class="dropdown-item nav-link nav_item" href="/produits/{{child_subcategorie.id}}-{{child_subcategorie.name|slugify}}">
+                                                            {{child_subcategorie.name}}
+                                                        </a>
+                                                    </li>
+                                                    {% endfor %}
+                                                </ul>
+                                            </div>
+                                        {% endif %}
+                                    </li>
+                                    {% endfor %}
+                                </ul>
+                            </div>
+                        {% endif %}
+                    </li>
+                    {% endfor %}
+                    </ul>
+                </div>
+            {% endif %}
         </li>
     {% else %}
         <li class="nav-item child{% if child.selected %} selected{% endif %}{% if child.ancestor %} ancestor{% endif %}{% if child.sibling %} sibling{% endif %}{% if child.descendant %} descendant{% endif %}{% if child.children %} dropdown{% endif %}">
