--- a/dshop/templates/theme/default/pages/contact.html
+++ b/dshop/templates/theme/default/pages/contact.html
@@ -71,27 +71,25 @@
             {% csrf_token %}
             <div class="row">
               <div class="form-group col-md-6">
-                <input required placeholder={% trans "Name" %} id="name" class="form-control" name="name" type="text">
+                <input required placeholder="{% trans 'Name' %}" id="name" class="form-control" name="name" type="text" />
               </div>
               <div class="form-group col-md-6">
-                <input required placeholder={% trans "Email" %} id="email" class="form-control" name="email" type="email">
+                <input required placeholder="{% trans 'Email' %}" id="email" class="form-control" name="email" type="email" />
               </div>
               <div class="form-group col-md-6">
-                <input required placeholder={% trans "Phone" %} id="phone" class="form-control" name="phone">
+                <input required placeholder="{% trans 'Phone' %}" id="phone" class="form-control" name="phone" />
               </div>
               <div class="form-group col-md-6">
-                <input placeholder={% trans "Subject" %} id="subject" class="form-control" name="subject">
+                <input placeholder="{% trans 'Subject' %}" id="subject" class="form-control" name="subject" />
               </div>
               <div class="form-group col-md-12">
-                <textarea required placeholder="Message" id="description" class="form-control" name="message"
-                  rows="4"></textarea>
+                <textarea required placeholder="Message" id="description" class="form-control" name="message" rows="4"></textarea>
               </div>
               <div class="form-group col col-12">
                   <div class="g-recaptcha" data-sitekey="{% get_setting 'RECAPTCHA_PUBLIC_KEY' %}" data-callback="dmCaptcha"></div>
               </div>
               <div class="col-md-12">
-                <button type="submit" title="Envoyer" class="btn btn-fill-out" id="submitButton" name="submit"
-                  value="Submit">{% trans "Send" %}</button>
+                <button type="submit" title="Envoyer" class="btn btn-fill-out" id="submitButton" name="submit" value="Submit">{% trans "Send" %}</button>
               </div>
               <div class="col-md-12">
                 <div id="alert-msg" class="alert-msg text-center"></div>
@@ -100,14 +98,11 @@
           </form>
         </div>
       </div>
-      <div class="col-lg-6 pt-2 pt-lg-0 mt-4 mt-lg-0">
+      <div class="dmpage-contact-map col-lg-6 pt-2 pt-lg-0 mt-4 mt-lg-0">
         {% if not c.result.map_latitude %}
             {% dm_get_site_coord as coords %}
         {% endif %}
-        <div id="map" class="contact_map2" data-zoom="15"
-          data-latitude="{% if c.result.map_latitude %}{{ c.result.map_latitude }}{% elif coords.lat %}{{coords.lat}}{% else %}48.6525144{% endif %}"
-          data-longitude="{% if c.result.map_longitude %}{{ c.result.map_longitude }}{% elif coords.lon %}{{coords.lon}}{% else %}-72.445567{% endif %}"
-          data-icon="{% static 'dshop/shopwise/images/marker.png' %}"></div>
+        <iframe width="300" height="170" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?q={% if c.result.map_latitude %}{{ c.result.map_latitude }}{% elif coords.lat %}{{coords.lat}}{% else %}48.6525144{% endif %},{% if c.result.map_longitude %}{{ c.result.map_longitude }}{% elif coords.lon %}{{coords.lon}}{% else %}-72.445567{% endif %}&hl=fr&z=15&output=embed" style="width:100%;height:100%;"></iframe>
       </div>
     </div>
   </div>
@@ -123,29 +118,4 @@
         }
     </script>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-    <!---->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD7TypZFTl4Z3gVtikNOdGSfNTpnmq-ahQ"></script>
-    <script type="text/javascript">
-    if ($("#map").length > 0) {
-        google.maps.event.addDomListener(window, 'load', init);
-    }
-    var map_selector = $('#map');
-
-    function init() {
-        var mapOptions = {
-        zoom: map_selector.data("zoom"),
-        mapTypeControl: false,
-        center: new google.maps.LatLng(map_selector.data("latitude"), map_selector.data("longitude")), // New York
-        };
-        var mapElement = document.getElementById('map');
-        var map = new google.maps.Map(mapElement, mapOptions);
-        var marker = new google.maps.Marker({
-        position: new google.maps.LatLng(map_selector.data("latitude"), map_selector.data("longitude")),
-        map: map,
-        icon: map_selector.data("icon"),
-        title: map_selector.data("title"),
-        });
-        marker.setAnimation(google.maps.Animation.BOUNCE);
-    }
-    </script>
 {% endblock foot %}
